        in a sample.

OTHER CHANGES

    o   After adding a "unmapped" category, the "qc" type in plotAnnot()
        now totals to 100 %.
    o   TPM() now warns if it will produce NaN values.
    o   In the template, merged `LIBRARY` and `RUN_ID`, used for same purpose.
    o   edgeR is only "Suggested": plotSlimSmear aborts if absent.

Changes in version 0.11.2

BUG FIXES

    o   hanabiPlot correction: was using data from general environment
        instead of its own parameter.
    o   Template correction: was using incorrect scale for rarefying raw
        counts.

Changes in version 0.11.1

BUG FIXES

    o   Import the whole ggplot2 in NAMESPACE, to correct a missing import
        and prevent further bugs.

Changes in version 0.11.0

NEW FEATURES

    o   Added the fldgmChamberWell function to convert between chamber
        and plate coordinate systems.

Changes in version 0.10.3

BUG FIXES

    o   Correct a PDF crash in plotAnnot().
    o   Correct documentation in mapStats() and plotAnnot().

Changes in version 0.10.2

BUG FIXES

    o   Correct name space.

Changes in version 0.10.1

BUG FIXES

    o   mapStats works again with groups with a single level.

OTHER CHANGES

    o   Added example data for mapStats and plotAnnot.

Changes in version 0.10.0

NEW FEATURES

    o   Added the loadMoiraiStats function to replace loadLogs("moirai").

Changes in version 0.9.0

NEW FEATURES

    o   nanoCAGE workflow as rmarkdown template.

Changes in version 0.8.0

NEW FEATURES

    o   Added the function exportInEnv
    o   Added the functions fldgmArrayQC, fldgmConcentrationPlot
        fldgmPicoGreen, and fldgmPicoGreenStdCurve
    o   Added the function hanabiPlot
    o   Added the function llPostProcess
    o   Added the function plotSlimSmear
    o   Added the function setupForMoirai
    o   Many other things ???

BUG FIXES
   o   loadLogs now handles CAGEscan 2.0 pipelines.

Changes in version 0.7.0

NEW FEATURES

    o   Added the function listSymbols.