@@ -17,6 +17,6 @@ Description: Functions to quickly generate reports about CAGE libraries.
  the MiSeq instrument, and is guaranteed to work harmless on bigger data
  produced by HiSeqs.
 License: file LICENSE
-Imports: gdata, ggplot2 (>= 1.0.0), grid, magrittr, plyr, reshape (>= 0.8.5), VennDiagram
+Imports: gdata, ggplot2 (>= 1.0.0), grid, gtools, magrittr, plyr, reshape (>= 0.8.5), VennDiagram
 Suggests: edgeR, knitr
 VignetteBuilder: knitr
