@@ -22,6 +22,7 @@ OTHER CHANGES
     o   TPM() now warns if it will produce NaN values.
     o   In the template, merged `LIBRARY` and `RUN_ID`, used for same purpose.
     o   edgeR is only "Suggested": plotSlimSmear aborts if absent.
+    o   Sort the groups in alphanumerical order in mapStats.
 
 Changes in version 0.11.2
 
